fix(messages): misaligned success and error messages

--- a/packages/fxa-content-server/app/styles/_state.scss
+++ b/packages/fxa-content-server/app/styles/_state.scss
@@ -14,6 +14,14 @@
     top: 0;
   }
 
+  @include respond-to('small') {
+    top: -7px;
+  }
+
+  @include respond-to('big') {
+    top: -15px;
+  }
+
   a {
     color: $message-text-color;
   }
